--- a/index.html
+++ b/index.html
@@ -53,6 +53,36 @@
 
             </div>
 
+            <!-- Container for my category section -->
+            <div class="categories-section-container">
+
+                <!-- Title for my categories -->
+                <div class="trending-title">
+                    <p class="trending-paragraph"><span><i class="fa-solid fa-earth-europe"></i></span> Categories</p>
+                </div>
+
+                <!-- Container of my categories -->
+                <div class="categories-content">
+                    
+                </div>
+            </div>
+
+            <div class="popular-people-container">
+                <div class="trending-title">
+                    <p class="trending-paragraph">
+                        <span><i class="fa-solid fa-user-plus"></i></span> Popular People
+                    </p>
+                </div>
+
+                <div class="popular-people-content">
+
+                </div>
+            </div>
+
+            <div class="go-to-top">
+                <button class="go-top-btn"><span><i class="fa-solid fa-turn-up"></i></span> back to the top</button>
+            </div>
+
         </div>
 
     </div>
