--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="go-to-top">
-                <button class="go-top-btn"><span><i class="fa-solid fa-turn-up"></i></span> back to the top</button>
+                <button class="scroll-top-btn go-top-btn"><span><i class="fa-solid fa-turn-up"></i></span> back to the top</button>
             </div>
 
         </div>
